Alignd header-nav and title correctly

--- a/app/app.css
+++ b/app/app.css
@@ -45,7 +45,7 @@ body {
 
 .list {
   font-size: 1.1em;
-  margin: -.4em 5%;
+  margin: -.5em 5%;
   width: 50%;
   text-align: right;
 }
